--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: '**/*'
-    translation: '''%language%_transcripts/%original_file_name%'''
+    translation: ''%language%_transcripts/%original_file_name%''
